<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/simple_search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MultipleSearchFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:text="@string/btn_select_file" />

    <ProgressBar
        android:id="@+id/progress_thing"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_alignParentEnd="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_search_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_select_file"
        android:layout_marginStart="10sp"
        android:text="@string/multiple_search"
        android:textAlignment="textEnd"
        tools:ignore="RtlCompat" />

    <RadioGroup
        android:id="@+id/radio_connector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_select_file"
        android:layout_alignBottom="@id/checkbox_search_type"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/checkbox_search_type"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="RtlCompat">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_search_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_and"
            android:checked="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_search_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_or" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_select_file"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10sp"
        android:enabled="false"
        android:text="@string/btn_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_below="@id/checkbox_search_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:hint="@string/singular_search_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <com.google.android.material.textview.MaterialTextView-->
    <!--        android:id="@+id/txt_selected_file"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="10sp"-->
    <!--        android:layout_marginTop="10sp"-->
    <!--        android:layout_marginEnd="10sp"-->
    <!--        android:visibility="gone"-->
    <!--        android:layout_below="@id/edittext_layout" />-->

    <ListView
        android:id="@+id/listview_files"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edittext_layout"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="@color/colorPaleGreen">

    </ListView>

</RelativeLayout>