<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/simple_search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SimpleSearchFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:text="@string/btn_select_file" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_selected_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:layout_toEndOf="@id/btn_select_file"
        android:layout_toStartOf="@id/progress_thing" />

    <ProgressBar
        android:id="@+id/progress_thing"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_alignParentEnd="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_search_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_select_file"
        android:layout_marginStart="10sp"
        android:text="@string/multiple_search"
        android:textAlignment="textEnd"
        tools:ignore="RtlCompat" />

    <RadioGroup
        android:id="@+id/radio_connector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_select_file"
        android:layout_alignBottom="@id/checkbox_search_type"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/checkbox_search_type"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="RtlCompat">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_search_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_and"
            android:checked="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_search_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_or" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_select_file"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10sp"
        android:enabled="false"
        android:text="@string/btn_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        android:layout_below="@id/checkbox_search_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:hint="@string/singular_search_hint"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edittext_layout"
        android:baselineAligned="false">

        <ScrollView
            android:id="@+id/scroll_page"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:fadeScrollbars="false"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:layout_marginEnd="10sp"
            android:background="@color/colorPaleGreen">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_page"
                android:textSize="16sp"
                android:paddingStart="10sp"
                android:paddingTop="10sp"
                android:paddingEnd="10sp"
                android:paddingBottom="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/list_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_marginEnd="10sp"
            android:baselineAligned="false">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="70sp"
                android:layout_marginBottom="10sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/page" />

            <ListView
                android:id="@+id/listview_pages"
                android:fadeScrollbars="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>